--- a/style.css
+++ b/style.css
@@ -121,6 +121,13 @@ ul li a:hover,
 ul li a.active {
   color: #2571d3;
 }
+#mobile {
+  display: none;
+  align-items: center;
+}
+#close {
+  display: none;
+}
 
 ul li a.active::after,
 ul li a:hover::after {
@@ -533,3 +540,135 @@ ul li a:hover::after {
   text-align: center;
   font-weight: 500;
 }
+
+/* -----------Media Query Starts--------- */
+@media (max-width: 799px) {
+  .section-p1 {
+    padding: 40px 40px;
+  }
+  body {
+    overflow-x: hidden;
+  }
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #e3e6f3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.2);
+    padding: 80px 0 0 10px;
+    transition: 0.4s;
+  }
+
+  #navbar.active {
+    right: 0px;
+  }
+
+  #navbar li {
+    margin-bottom: 25px;
+    font-size: 25px;
+  }
+  #mobile {
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i {
+    color: #000;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+  #close {
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 25px;
+  }
+
+  #lg-bag {
+    display: none;
+  }
+
+  /* hero */
+  #hero {
+    height: 70vh;
+    padding: 0 80px;
+    background-position: 30% 30%;
+  }
+
+  #feature {
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+  #product1 .pro {
+    margin: 15px;
+  }
+
+  #banner {
+    height: 20vh;
+  }
+
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 40vh;
+  }
+
+  #banner3 {
+    padding: 0 40px;
+  }
+
+  #newsletter .form {
+    width: 70%;
+  }
+}
+
+/* mobile screen  */
+@media (max-width: 477px) {
+  body {
+    width: 100%;
+    overflow-x: hidden;
+  }
+  .section-p1 {
+    padding: 20px;
+  }
+  #navbar {
+    padding: 10px 30px;
+  }
+  #hero {
+    padding: 0 18px;
+    background-position: 55%;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+  h1 {
+    font-size: 28px;
+  }
+  #feature {
+    justify-content: space-between;
+  }
+  #feature .fe-box {
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+
+  #banner {
+    height: 40vh;
+  }
+
+  #newsletter .form {
+    width: 100%;
+  }
+}
+/* -----------Media Query Ends--------- */
