--- a/style.css
+++ b/style.css
@@ -541,6 +541,29 @@ ul li a:hover::after {
   font-weight: 500;
 }
 
+/* ------------------product page--------- */
+
+#page-header {
+  background-image: url(./img/banner/b1.jpg);
+  width: 100%;
+  height: 45vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 14px;
+}
+
+#page-header h2 {
+  color: #e2e6f3;
+}
+
+#page-header p {
+  color: #c1c4cf;
+}
+
 /* -----------Media Query Starts--------- */
 @media (max-width: 799px) {
   .section-p1 {
@@ -669,6 +692,19 @@ ul li a:hover::after {
 
   #newsletter .form {
     width: 100%;
+  }
+
+  /* product page */
+  #page-header {
+    height: 70vh;
+    padding: 0 80px;
+    background-position: 30% 30%;
+  }
+  #page-header h2 {
+    font-size: 22px;
+  }
+  #page-header p {
+    font-size: 12px;
   }
 }
 /* -----------Media Query Ends--------- */
